# cuda

./: .gitignore  README.md
00-basic/: Notes.md  README.md  add_gpu_v1.cu  add_gpu_v2.cu  add_gpu_v3.cu  add_gpu_v4.cu  array_gpu_v2.cu  array_sum.cu  array_sum_v2.cu
01/: array_sum.cpp  array_sum.cu
01-shared-memory/: CMakeLists.txt  README.md  reverse.cu
exercises/: matmul.cu  montecarlo.cu
exercises/montecarlo/: montecarlo.cpp  montecarlo.cu
experiments/matrixAdd/: CMakeLists.txt  matrixAdd.cpp  matrixAdd.cu
experiments/vectorAdd/: CMakeLists.txt  test.py  vectorAdd.cpp  vectorAdd.cu
miscellaneous/matmul/: CMakeLists.txt  matmul.cu
miscellaneous/montecarlo/: CMakeLists.txt
tecnical-blog-stuff/: README.md
tecnical-blog-stuff/00-basic/: CMakeLists.txt  add_gpu_v1.cu  add_gpu_v4.cu
tecnical-blog-stuff/01-shared-memory/: README.md  dynamic.cu  static.cu
